# wallflower

./: .gitignore  Makefile  Pipfile  README.md  main.py  mapping.json  pyproject.toml  scrape.py  setup.py  test.py  wallflower.py
.github/workflows/: python-app.yml
app/: __init__.py  analyze.py  async_utils.py  config.py  db.py  elastic.py  google.py  imgur.py  mongo.py  reddit.py  search.py  utils.py
app/clients/: __init__.py  base.py  imgur.py  reddit.py  vision.py  wallhaven.py
app/gui/: color_picker.py  image_list.py  main_window.py  scan_popup.py  settings.py  settings_dialog.py
tests/: test_db.py
