[tool.poetry]
name = "wallflower-cli"
version = "0.1.0"
description = ""
authors = ["alexgQQ <alex.grand@beatport.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
praw = "^7.4.0"
numpy = "^1.21.1"
scipy = "^1.7.1"
aiohttp = "^3.7.4"
aiofiles = "^0.7.0"
Pillow = "^8.3.1"
google-cloud-vision = "^2.4.2"
scikit-image = "^0.18.2"
opencv-python = "^4.5.3"
gcloud-aio-storage = "^6.1.0"
imgurpython = "^1.1.7"
vptree = "^1.2"
google-cloud-storage = "^1.42.0"
setuptools = "^57.4.0"
click = "^8.0.1"
funcy = "^1.16"
typing-extensions = "^3.10.0"
python-dotenv = "^0.19.0"
SQLAlchemy = "^1.4.25"
colormath = "^3.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pyinstrument = "^4.0.2"
pytest = "^6.2.4"
mypy = "^0.910"
pylint = "^2.9.6"
Faker = "^8.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
